modify the raft system